--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .venv
-/test.ipynb
-/__pycache__
-/views/__pycache__
-/instance
+test.ipynb
+__pycache__
+views/__pycache__
+instance
+uploads
+outputs
